sbasic/tests/onerror.expected
Error trapped:  4
At line:  4
After error
Custom error:  42
After ERROR 42
Done

